[package]
name = "pingora-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = "0.6"
pingora-core = "0.6"
pingora-proxy = "0.6"
pingora-http = "0.6"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
base64 = "0.22"

[[bin]]
name = "pingora-proxy"
path = "src/main.rs"
